change order of projects

--- a/stroke.html
+++ b/stroke.html
@@ -57,7 +57,7 @@
 									<hr />
 									<h2>Tools Used</h2>
 									<ul>
-										<li>I primarily utilized <b>PySpark</b> to clean and explore this data set</li>
+										<li>I primarily utilized <b>Python</b> to clean and explore this data set</li>
 										<li>I visualized the data in <b>PowerBI</b></li>
 									</ul>
 									<hr />
