--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
+							<div class="image"><img src="images/Stroke Mortality Rates National.png" alt="" /></div><div class="content">
+								<h2>Stroke Mortality Rates in the U.S.<br />
+								</h2>
+								<p>In this project, I used <b>Python</b> to explore and clean data about U.S. stroke mortality rates.
+									I visualized the data using <b>PowerBI</b>.</p>
+								<ul class="actions stacked">
+									<li><a href="stroke.html" class="button">View Project</a></li>
+							</div>
+						</section>
+						<section class="spotlight">
 							<div class="image"><img src="images/Manufactured Home Dashboard.png" alt="" /></div><div class="content">
 								<h2>Manufactured Homes Survey<br />
 								</h2>
@@ -67,16 +77,6 @@
 									I visualized the data using <b>Tableau</b>.</p>
 								<ul class="actions stacked">
 									<li><a href="manuhomes.html" class="button">View Project</a></li>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/Stroke Mortality Rates National.png" alt="" /></div><div class="content">
-								<h2>Stroke Mortality Rates in the U.S.<br />
-								</h2>
-								<p>In this project, I used <b>PySpark</b> to explore and clean data about U.S. stroke mortality rates.
-									I visualized the data using <b>PowerBI</b>.</p>
-								<ul class="actions stacked">
-									<li><a href="stroke.html" class="button">View Project</a></li>
 							</div>
 						</section>
 						<section class="spotlight">
